# CTFeed

./: .env.example  .gitignore  Dockerfile  README.md  ctfeed.py  docker-compose.yml  pyproject.toml  startup.sh  test.py
migrations/: env.py
migrations/versions/: 56604a40e3a6_add_ctfmenu_message.py  6e2b6a2f8874_initial_schema.py
notes/: config.md  ctfmenu_message.md  database.md  embed.md  error_handling.md  event.md  logging.md
src/: bot.py  config.py
src/backend/: channel_op.py  config.py  config_test.py  ctfmenu_message.py  get_user.py  join_channel.py  security.py
src/bgtask/: __init__.py  detect_event_update_and_remove.py  detect_events_new.py  recover_ctfmenu_message.py  recover_scheduled_events.py
src/cog/: bgtask.py  config.py  ctfmenu.py  help.py
src/cogs/: bgtask_interactions.py  ctf.py  user.py
src/crud/: __init__.py  config.py  crud_event.py  crud_user.py  ctfmenu_message.py  event.py
src/database/: database.py  model.py
src/router/: __init__.py  auth.py  ctf.py  event.py  user.py
src/schema/: __init__.py  event.py  general.py  user.py
src/utils/: ctf_api.py  embed_creator.py  notification.py
